--- a/esdoc-integrate-manual-plugin/package.json
+++ b/esdoc-integrate-manual-plugin/package.json
@@ -9,6 +9,9 @@
     "type": "git",
     "url": "https://github.com/esdoc/esdoc-plugins"
   },
+  "dependencies": {
+    "readdir-enhanced": "^2.2.1"
+  },
   "devDependencies": {
     "esdoc": "latest",
     "mocha": "2.5.3"
